--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -12,4 +12,4 @@
 </ul>
 
 <% end %>
-<p><%= link_to "Add new Post", new_app_path(@app)%></p>
+<p><%= link_to "Add new Post", {:action => 'create'} %></p>
