--- a/app/views/post/new.html.erb
+++ b/app/views/post/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Post</h1>
 
-<%= form_with model: @app do |form| %>
+<%= form_with model: @post do |form| %>
   <div>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
