--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,1 +1,17 @@
 <h1> Posts for given user </h1>
+
+<h1>Blog App</h1>
+
+ <% if @posts.blank? %>
+ <p>There are not any posts currently in the system.</p>
+ <% else %>
+ <p>These are the current posts in our system</p>
+<% @posts.each do |c| %>
+<ul id = "posts">
+   
+   <li><%= link_to c.title, {:action => 'show', :id => c.id} %></li>
+   
+</ul>
+<% end %>
+ <% end %>
+<p><%= link_to "Add new Post", {:action => 'new'} %></p>
