--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -13,8 +13,8 @@
   </div>
 
   <div>
-    <%= form.label : %><br>
-    <%= form.text_area :author %>
+  <%= form.label :occupation %><br>
+  <%= form.text_area :occupation %>
   </div>
 
   <div>
