--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -35,4 +35,4 @@
  <% end %>
    
 <% end %>
-<p><%= link_to "Add new User", {:action => 'new'} %></p>
+<p class= 'add user'><%= link_to "Add new User", {:action => 'new'} %></p>
