--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -18,7 +18,6 @@
 <h1><%= @user.name %></h1>
 </div>
 </div>
-<p class='add user'><%= link_to "Add new User", {:action => 'new'} %></p>
 
 <div class='bio'>
 <p>Bio: 
@@ -40,6 +39,6 @@
         </div>
       <% end %>
         <div class="button">
-          <button type="button" class="post all">See all posts</button>
+          <a href= 'http://localhost:3000/user/1/post'><button type="button" class="post all">See all posts</button></a>
         </div>
 </body>      
