fix post comments

--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -16,7 +16,11 @@
      <span>Likes: <%= c.likes_counter %></span>
    </p>
  </div>
+ <div class="user-post-preview">
+ <%= c.last_five_comments %>
+ </div>
    <% end %>
+  
 </ul>
 <% end %>
 
