--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,15 +29,14 @@ h1 {
 
 a {
   text-decoration: none;
-  text-align: left;
 }
 
 .user.img {
   display: block;
   align-items: flex-start;
   text-align: left;
-  width: 0%;
-  margin: 5%;
+  width: 10%;
+  margin-bottom: 5%;
 }
 
 .add.user {
@@ -61,17 +60,16 @@ a {
 }
 
 .button {
-  display: flex;
-  padding: 5%;
-  justify-content: center;
+  text-align: center;
 }
 
 .post.all {
-  width: 50%;
-  padding: 3%;
+  width: 70%;
+  padding: 1%;
   font-size: 15px;
   font-weight: bold;
   text-decoration: wavy;
+  align-items: center;
 }
 
 .post.counter {
