--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -1,26 +1,26 @@
 <h1>Blog App</h1>
 
-<% if @posts.blank? %>
-<p>There are not any posts currently in the system.</p>
-<% else %>
-<p class= 'add user'>These are the current posts in our system</p>
+   <div id = "posts">
+      <h2 class= 'add user'><%= @user.name %></h2>
+      <p class= 'add user'>Posts: <%= @user.posts_counter %></p>
+      <p class= 'add user'>These are the current posts in our system</p>
 
-<ul id = "posts">
-   <% @posts.each do |c| %>
+      <% @user.posts.each do |c| %>
+      <div class="user-post-preview">
+         <h3><%= link_to c.title, user_post_path(c.author_id, c) %></h3>
+         <p><%= c.text %></p>
+         <p><%= c.author_id %></p>
+         <p class="post-data">
+         <span>Comments: <%= c.comments_counter %></span>
+         <span>Likes: <%= c.likes_counter %></span>
+         </p>
+      </div>
+   </div>
+
    <div class="user-post-preview">
-   <h3>Title: <%= c.title %></h3>
-   <p><%= c.text %></p>
-   <p><%= c.author_id %></p>
-   <p class="post-data">
-     <span>Comments: <%= c.comments_counter %></span>
-     <span>Likes: <%= c.likes_counter %></span>
-   </p>
- </div>
- <div class="user-post-preview">
- <%= c.last_five_comments %>
- </div>
-   <% end %>
-  
-</ul>
-<% end %>
-
+   <% c.last_five_comments.each do |comment| %>
+      <p> <%= comment.author.name %> : <%= comment.text %></p>
+      <% end %>
+     
+      </div>
+      <% end %>
