--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -37,7 +37,7 @@
      <img class='post-counter-icon' src="https://img.icons8.com/ios/50/null/comments.png"/>
      <span><%= link_to @coments,"Comments:", {:action => 'new'} %><%= c.comments_counter %></span>
      <img onclick='displaycount()' class='post-counter-icon' src="https://img.icons8.com/sf-ultralight/50/null/good-quality.png"/>
-     <p class = "carrier"> 0 </p>
+     <p id = "carrier"> 0 </p>
      <span>Likes: <%= c.likes_counter %></span>
      
      </p>
@@ -49,7 +49,7 @@
      })();
 
      function displaycount(){
-        document.querySelectorAll("carrier").innerHTML = count();
+        document.getElementById("carrier").innerHTML = count();
      }
 </script>
   </div>
